# games

flappy_bird/: CMakeLists.txt  CMakePresets.json  vcpkg.json
flappy_bird/include/: AssetManager.hpp  Bird.hpp  Config.hpp  GameManager.hpp  Pipe.hpp  ScoreCounter.hpp
flappy_bird/src/: AssetManager.cpp  Bird.cpp  GameManager.cpp  Pipe.cpp  ScoreCounter.cpp  main.cpp
tetris/: CMakeLists.txt
tetris/include/: EventManager.hpp  Field.hpp  GameController.hpp  GameManager.hpp  ScoreBoard.hpp  Tetromino.hpp  TetrominoFactory.hpp
tetris/src/: Field.cpp  GameController.cpp  GameManager.cpp  ScoreBoard.cpp  Tetromino.cpp  TetrominoFactory.cpp  main.cpp
